test-suite/tests/roundtrip/invalid/semantic/multiple_errors/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/multiple_errors/01/input.essence:1:1:
  |
1 | find int : int(1..n)
  | ^^^^
Error: Declaration without any members

tests/roundtrip/invalid/semantic/multiple_errors/01/input.essence:1:6:
  |
1 | find int : int(1..n)
  |      ^^^^^^^^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/semantic/multiple_errors/01/input.essence:2:11:
  |
2 | such that int > 5
  |           ^^^^^^^
Skipped tokens

tests/roundtrip/invalid/semantic/multiple_errors/01/input.essence:2:11:
  |
2 | such that int > 5
  |           ^
Missing Expression

